# AcceleratedVision

./: CMakeLists.txt  LICENSE  Performance.xlsx  README.md
include/: accel_vision.h  cuda_adjust.h  cuda_antisotropy.h  cuda_arithmetic_logical.h  cuda_blur.h  cuda_bordering.h  cuda_color_converter.h  cuda_dilation.h  cuda_equalize_hist.h  cuda_erode.h  cuda_gamma_correction.h  cuda_gaussian_back_projection.h  cuda_histogram.h  cuda_laplace.h  cuda_lut.h  cuda_merge.h  cuda_resize.h  cuda_sobel.h  cuda_split.h  cuda_sum.h  cuda_threshold.h  cuda_transform.h  cuda_warpaffine.h  time_utility.h
sources/: cuda_adjust.cu  cuda_antisotropy.cu  cuda_arithmetic_logical.cu  cuda_blur.cu  cuda_bordering.cu  cuda_color_converter.cu  cuda_dilation.cu  cuda_equalize_hist.cu  cuda_erode.cu  cuda_gamma_correction.cu  cuda_gaussian_back_projection.cu  cuda_histogram.cu  cuda_laplace.cu  cuda_lut.cu  cuda_merge.cu  cuda_resize.cu  cuda_sobel.cu  cuda_split.cu  cuda_sum.cu  cuda_threshold.cu  cuda_transform.cu  cuda_warpaffine.cu
test/: CMakeLists.txt  README.md  test_cudaGray.cpp  test_cudaGray.py  test_cudaThreshold.cpp  test_cudaThreshold.py
